--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>BaiTap4</title>
+        <title>BaiTap1</title>
         <meta charset="utf-8" />
-        <script src="./bai4.js">
-            BaiTap4
+        <script src="./bai1_c11.js">
+            BaiTap1
         </script>
     </head>
     <body></body>
